2002-02-27  Sam Steingold  <sds@gnu.org>

	* linux.lisp (wait, waitpid): new C call-outs
	(provide "linux"): for (require "linux") in wrap.lisp

2002-03-01  Sam Steingold  <sds@gnu.org>

	error reporting unification
	* trace.lisp (error-function-name): new function
	(trace1): use it
	* cmacros.lisp (compiler-macro-function): ditto
	* error.d (fehler_funname_type, fehler_funname_source): new functions
	* lispbibl.d (fehler_funname_type, fehler_funname_source): declare
	* control.d (function): use fehler_funname_source()
	* eval.d (eval1): ditto
	(apply, funcall): use fehler_funname_type()

2002-02-02  Sam Steingold  <sds@gnu.org>

	* trace.lisp (force-cclosure): take FDEFINITION when compiling
	(%local-set): COMPILE NEW-DEF and take its FDEFINITION
	when NEW-DEF is not compiled

2002-02-28   Barry Fishman  <bfishman@users.sf.net>

	* clx.f (CONVERT-SELECTION): clean up the stack
	(SELECTION-NOTIFY): added window notification

2002-02-28  Sam Steingold  <sds@gnu.org>

	* defs1.lisp (require): push *load-truename* on *load-paths*
	* compiler.lisp (c-REQUIRE): push *compile-file-truename*
	on *load-paths*

2002-02-28  Sam Steingold  <sds@gnu.org>

	* compiler.lisp (c-form): fixed a bug: EXPAND-COMPILER-MACRO
	can return an atom

2002-02-28  Sam Steingold  <sds@gnu.org>

	* bindings/linuxlibc6/linux.lisp (substitution): map DEFCONSTANT

2002-02-28  Sam Steingold  <sds@gnu.org>

	* compiler.lisp (c-write-lib): bind *PRINT-SYMBOLS-LONG* when
	writing *.lib files, just like with *.fas files

2002-02-27  Sam Steingold  <sds@gnu.org>

	implemented weak hash-tables
	* hashtabl.d (MAKE-HASH-TABLE): accept :WEAK keyword argument
	(rehash, hash_store, REMHASH, MAPHASH, HASH-TABLE-ITERATE)
	(CLASS-TUPLE-GETHASH): use ht_kvtable()/kvtable_data()
	(hash_lookup): remove obsolete key/value from a weak HT
	(prepare_resize): accept third argument `weak'
	(resize): handle weak hash-tables
	(HASH-TABLE-WEAK-P, %SET-HASH-TABLE-WEAK-P): implemented
	(sxhash_atom): handle WeakKVT